Fix layout on night shift.

--- a/src/states/NightShift.scss
+++ b/src/states/NightShift.scss
@@ -1,8 +1,8 @@
 @import '../globals';
 
-@mixin stat-bar($display: flex) {
+@mixin stat-bar($color: gray) {
 	padding: 0.8rem;
-	border: 0.2rem solid gray;
+	border: 0.2rem solid $color;
 	border-radius: 0.4rem;
 	color: hotpink;
 }
@@ -11,7 +11,7 @@
 	grid-row: 1 / 3;
 	display: grid;
 	grid-template-areas:
-		'title       title       title     '
+		'title       title       moves     '
 		'play        play        moves     '
 		'play        play        moves     '
 		'play        play        moves     ';
@@ -34,11 +34,10 @@
 		grid-area: title;
 		display: grid;
 		grid-template-areas:
-			'lust    sexergy   moves';
+			'lust    sexergy  ';
 		grid-template-columns:
 			2fr
-			1fr
-			20rem;
+			1fr;
 		gap: 1rem;
 
 		&__lust {
@@ -62,28 +61,33 @@
 				color: gray;
 			}
 		}
-
-		&__moves {
-			grid-area: moves;
-			text-transform: uppercase;
-			color: hotpink;
-			place-self: center;
-		}
 	}
 
 	&__moves {
 		grid-area: moves;
-		position: relative;
 		justify-self: end;
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
 		width: 100%;
 		overflow-y: scroll;
-		max-height: 80vh;
+		@include stat-bar($color: hotpink);
+
+		&__title {
+			text-transform: uppercase;
+			color: hotpink;
+			place-self: center;
+		}
+
+		&__container {
+			position: relative;
+		}
 
 		&__scroll {
 			position: absolute;
-			left: 0;
-			top: 0;
-			width: calc(100% - 1rem);
+			left: 0.4rem;
+			top: 0.8rem;
+			width: calc(100% - 0.8rem);
 			display: flex;
 			flex-direction: column;
 			gap: 1rem;
